# SPE_Mini_Project

./: .dockerignore  Dockerfile  Jenkinsfile  README.md  calc.py  requirements.txt  setup.cfg  test_calc.py
ansible/: deploy.yml
scientific_calculator/: __init__.py  api.py  calc.py
scientific_calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
templates/: index.html
tests/: test_calc.py
