[metadata]
name = scientific_calculator
version = 0.1.0
author = Nikhilesh K
description = A CLI scientific calculator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nikhilesh611/SPE_Mini_Project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.8
install_requires =
    InquirerPy

[options.entry_points]
console_scripts =
    scientific-calculator = scientific_calculator.calc:main
