[metadata]
name = scientific_calculator
version = 0.1.0
author = Nikhilesh K
description = A FastAPI scientific calculator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nikhilesh611/SPE_Mini_Project
classifiers =
    Programming Language :: Python :: 3
    Framework :: FastAPI
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi
    uvicorn
    python-multipart
    jinja2